# krumpatch

./: .clang-tidy  .gitignore  CMakeLists.txt  flake.nix  shell.nix
examples/: CMakeLists.txt  basic.cpp
src/: CMakeLists.txt  app.cpp  app.hpp  entrypoint.hpp  krumpatch.h  log.cpp  log.hpp
